--- a/src/app/home/bwir-table/bwir-table.component.html
+++ b/src/app/home/bwir-table/bwir-table.component.html
@@ -126,7 +126,7 @@
     <div class="modal-content">
       <div class="result-container1">
         <fieldset id="baselineRecords">
-          <legend>Nutritional Status</legend>
+          <legend>Baseline Weight and Immunization Records</legend>
           <div class="result-table1">
             <table>
               <thead>
