--- a/src/app/home/bmi-result/bmi-result.component.html
+++ b/src/app/home/bmi-result/bmi-result.component.html
@@ -115,7 +115,7 @@
       <option value="11">December</option>
     </select>
 
-    <button (click)="clearFilters()">Clear_Filters</button>
+    <button (click)="clearFilters()">Clear Filters</button>
   </div>
 </fieldset>
 <fieldset>
