--- a/src/app/home/bwir-table/bwir-table.component.css
+++ b/src/app/home/bwir-table/bwir-table.component.css
@@ -300,7 +300,7 @@ legend {
   }
 
   #baselineRecords legend {
-    font-size: 90%;
+    font-size: 80%;
   }
 
   .result-container {
@@ -317,8 +317,8 @@ legend {
 
   .result-table th,
   .result-table td {
-    max-width: 27.9px;
-    font-size: 4.5px;
+    max-width: 100%;
+    font-size: 7px;
     font-weight: bold;
   }
 
@@ -335,12 +335,12 @@ legend {
   }
 
   .result-container button {
-    font-size: 5.5px;
+    font-size: 10px;
     padding: 0px 0px;
   }
 
   .filter-container label {
-    max-width: 50px;
+    max-width: 80px;
     font-size: 6px;
   }
 
@@ -360,6 +360,9 @@ legend {
 
   .pagination {
     font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
   }
 
   .pagination Button {
@@ -380,7 +383,7 @@ legend {
   }
 
   #viewCon Button {
-    font-size: 5px;
+    font-size: 8px;
     padding: 0px 5px;
   }
 
@@ -408,14 +411,18 @@ legend {
 
   .result-table1 th,
   .result-table1 td {
-    max-width: 35.5px;
-    font-size: 5px;
-    font-weight: normal;
+    max-width: 100%;
+    font-size: 7px;
+    font-weight: bold;
   }
 
   .result-table1 th {
     background-color: #f2f2f2;
     font-weight: lighter;
     font-weight: bold;
+  }
+
+  legend {
+    text-align: left;
   }
 }
