--- a/src/app/home/dashboard/dashboard.component.css
+++ b/src/app/home/dashboard/dashboard.component.css
@@ -220,3 +220,53 @@ canvas {
 .card-text {
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .chart-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .chart-container {
+    max-width: 100%;
+    border: 1px solid #ddd;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .suw-label {
+    font-size: 10px;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 1px;
+  }
+
+  label {
+    font-size: 15px;
+  }
+
+  input {
+    font-size: 15px;
+    max-width: 10%;
+  }
+
+  canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    border-radius: 5px;
+  }
+
+  .chart-container1 {
+    max-width: 100%;
+    border: 1px solid #ddd;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .SSt-label {
+    font-size: 10px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1px;
+  }
+}
