--- a/src/app/home/profile-table/profile-table.component.css
+++ b/src/app/home/profile-table/profile-table.component.css
@@ -264,8 +264,8 @@ legend {
 
   .result-table th,
   .result-table td {
-    max-width: 27.5px;
-    font-size: 4px;
+    max-width: 100%;
+    font-size: 7px;
     font-weight: bold;
   }
 
@@ -281,7 +281,7 @@ legend {
   }
 
   button {
-    font-size: 3px;
+    font-size: 10px;
     padding: 0px 0px;
   }
 
@@ -306,10 +306,17 @@ legend {
 
   .pagination {
     font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
   }
 
   .pagination Button {
     font-size: 10px;
     padding: 5px 23px;
+  }
+
+  legend {
+    text-align: left;
   }
 }
