--- a/src/app/home/quarterly-table/quarterly-table.component.css
+++ b/src/app/home/quarterly-table/quarterly-table.component.css
@@ -239,8 +239,8 @@ legend {
 
   .result-table th,
   .result-table td {
-    max-width: 32.5px;
-    font-size: 5px;
+    max-width: 100%;
+    font-size: 7.5px;
     font-weight: bold;
   }
 
@@ -258,12 +258,12 @@ legend {
   }
 
   .result-container Button {
-    font-size: 5px;
+    font-size: 10px;
     padding: 0px 0px;
   }
 
   .filter-container label {
-    max-width: 50px;
+    max-width: 80px;
     font-size: 6px;
   }
 
@@ -283,10 +283,17 @@ legend {
 
   .pagination {
     font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
   }
 
   .pagination Button {
     font-size: 10px;
     padding: 5px 23px;
+  }
+
+  legend {
+    text-align: left;
   }
 }
