--- a/src/app/page/about/about.component.css
+++ b/src/app/page/about/about.component.css
@@ -21,6 +21,14 @@
   margin-right: 10px;
 }
 
+.navbar-content {
+  display: flex;
+  align-items: center;
+  font-style: italic;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 .navbar .navbar-brand {
   font-size: 24px;
   color: #000000;
@@ -41,6 +49,8 @@
   color: #000000;
   font-size: 16px;
   text-decoration: none;
+  font-style: italic;
+  font-weight: bold;
 }
 
 .navbar .navbar-nav .nav-link:hover {
@@ -149,9 +159,17 @@
 }
 
 @media (max-width: 768px) {
+  .navbar-content {
+    font-size: 10px;
+  }
+
   .navbar-logo {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .navbar .navbar-nav .nav-link {
+    font-size: 10px;
   }
 
   .top h1 {
