--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -30,22 +30,20 @@
   <div class="mission">
     <h2>Mission</h2>
     <p>
-      To uplift the quality of the people by ensuring sustainable growth and
-      development through people empowerment, optimum utilization of resources,
-      delivery of basic social service, upholding public safety and promotion of
-      economic activities that are supportive to the development of eco-tourism,
-      agricultural enterprise and industry sector of the municipality
+      The Municipality of San Juan Promotes the primary health care approach and
+      the modern technological methods integrating sociocultural knowledge of the
+      community in making every health services readily available and accessible
+      to the people
     </p>
   </div>
 
   <div class="vision">
     <h2>Vision</h2>
     <p>
-      SAN JUAN, BATANGAS is a premier eco-tourism destination in the country and
-      agro-industrial center in CALABARZON, anchored on a highly competitive
-      economy with investor-friendly, resilient, safe and sustainable
-      environment, inspired by God-fearing, empowered and gender-responsive
-      citizenry under a dynamic and participative leadership
+      The people of San Juan imbued with social responsibility, compassion and
+      sense of Nationalism in sustaining and maintaining the health of it's family
+      and community, facilitating the environmental development of the municipality
+      thus becoming a model healthy community in the Southeastern most part of Batangas
     </p>
   </div>
 
