--- a/src/app/home/announcement/announcement.component.css
+++ b/src/app/home/announcement/announcement.component.css
@@ -22,7 +22,7 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"] {
+textarea {
   width: 100%;
   padding: 30px;
   font-size: 16px;
@@ -157,7 +157,7 @@ label {
     padding: 10px;
   }
 
-  input[type="text"] {
+  textarea {
     width: 100%;
     padding: 0px 0px 20px;
     font-size: 10px;
