--- a/src/app/home/announcement/announcement.component.html
+++ b/src/app/home/announcement/announcement.component.html
@@ -4,13 +4,13 @@
     <form (ngSubmit)="onSubmit()" #userForm="ngForm">
       <div class="form-group">
         <label for="announcement">Announcement</label>
-        <input
-          type="text"
+        <textarea
           id="announcement"
           name="announcement"
           [(ngModel)]="Announcement.announcement"
+          rows="4"
           required
-        />
+        ></textarea>
       </div>
 
       <button type="submit" [disabled]="!userForm.valid">
